@@ -32,6 +32,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - Commited patch from Eygene Ryanbinkin to fix bug 61. /dev/null would
       under some circumstances have its permissions modified when jobs exited
       on a compute node.
+  b - only clear the mom state when actually running the health check script
 
 2.5.1
   b - modified Makefile.in and Makefile.am at root to include contrib/AddPrivileges
